--- a/lab01.ipynb
+++ b/lab01.ipynb
@@ -177,16 +177,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Funkcję zwraca listę par liczb zaprzyjaźnionych nie większych niż n\n",
-    "# (zobacz: https://pl.wikipedia.org/wiki/Liczby_zaprzyja%C5%BAnione) \n",
+    "# (zobacz: https://pl.wikipedia.org/wiki/Liczby_zaprzyja%C5%BAnione)\n",
+    "def sumaDzielnikow(n):\n",
+    "    sumaDzielnikow = 0\n",
+    "    for x in range(1, n//2+1):\n",
+    "        if n % x == 0:\n",
+    "            sumaDzielnikow += x\n",
+    "    return sumaDzielnikow\n",
+    "\n",
     "def zaprzyjaznione(n):\n",
-    "    pass\n",
+    "    pomocnik = 0\n",
+    "    tablicaLiczbZaprzyjaznionych = []\n",
+    "    \n",
+    "    for x in range(1,n):\n",
+    "        if sumaDzielnikow(x) > 1:\n",
+    "            if sumaDzielnikow(sumaDzielnikow(x)) == x and sumaDzielnikow(x) > x:\n",
+    "                str = (x,sumaDzielnikow(x))\n",
+    "                pomocnik += 1\n",
+    "                tablicaLiczbZaprzyjaznionych.append(str)\n",
+    "    return tablicaLiczbZaprzyjaznionych\n",
+    "    \n",
+    "    \n",
     "\n",
     "print(zaprzyjaznione(1) == [])\n",
     "print(zaprzyjaznione(300) == [(220, 284)])\n",
@@ -214,19 +243,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def solve(d, m, tab):\n",
-    "    pass  "
+    "    suma = 0\n",
+    "    sum_tab = [0]\n",
+    "    for i in range(0, len(tab)):\n",
+    "        suma += tab[i]\n",
+    "        sum_tab.append(suma)\n",
+    "        \n",
+    "    sposoby = 0\n",
+    "    for i in range(0, len(tab) - m + 1):\n",
+    "        sposoby += (sum_tab[i + m] - sum_tab[i] == d)\n",
+    "    return sposoby"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def solve(d, m, tab):\n",
+    "    solutions = 0\n",
+    "    seq_sum = sum(tab[0:m])\n",
+    "    for index, num in enumerate(tab[m:]):\n",
+    "        if seq_sum == d:\n",
+    "            solutions += 1\n",
+    "        seq_sum = seq_sum - tab[index] + num\n",
+    "    return solutions + (1 if seq_sum == d else 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -245,11 +301,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(solve(d, m, tab)==2)\n",
     "print(solve(d1, m1, tab1)==0)\n",
@@ -273,6 +339,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "47\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def HowManyIntegers(n):\n",
+    "    \n",
+    "    return sum({*str(x)}<={*\"0279\"}for x in range(1,n))\n",
+    "    \n",
+    "    return len([x for x in range(1,n) if set(str(x))<=set(\"0279\")])\n",
+    "\n",
+    "\n",
+    "code = 'return sum({*str(x)}<={*\"0279\"}for x in range(1,n))'\n",
+    "{*str(x)}\n",
+    "print(len([x for x in code if x!=\" \"]))\n",
+    "print(HowManyIntegers(1) == 0)\n",
+    "print(HowManyIntegers(10) == 3) # 2,7,9)\n",
+    "print(HowManyIntegers(28) == 6) # 2,7,9,20,22,27) "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -283,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -295,11 +395,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Zen of Python, by Tim Peters\n",
+      "\n",
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
+     ]
+    }
+   ],
    "source": [
     "# PEP20\n",
     "import this"
@@ -348,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
