--- a/lab03.ipynb
+++ b/lab03.ipynb
@@ -23,14 +23,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n",
+      "The value is: 42\n"
+     ]
+    }
+   ],
    "source": [
-    "def log(...):\n",
-    "    \" Wypisuje wiadomosc opcjonalnie wraz z podaną wartoscią \"\n",
+    "def log(text, value=\"\"):\n",
+    "    if(value):\n",
+    "        print(text+\": \"+str(value))\n",
+    "    else:\n",
+    "        print(text)\n",
+    "    \n",
     "    pass\n",
     "\n",
     "log(\"Hello World!\") # Hello World!\n",
@@ -46,15 +59,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "def mean(...):\n",
-    "    \"\"\"Zwraca średnią liczb podanych jako argumenty pozycyjne\"\"\"\n",
+    "def mean(*values):\n",
+    "    mean = 0\n",
+    "    if values:\n",
+    "        for value in values:\n",
+    "            mean += value\n",
+    "        mean = mean / len(values)\n",
+    "        return mean\n",
+    "    else:\n",
+    "        return \":(\"\n",
+    "    \n",
     "    pass\n",
+    "\n",
+    "print(mean(1,2,3) == 2)\n",
+    "print(mean(2,2,4,4) == 3)\n",
+    "print(mean(1,2,3,4,5,61,2,12,123,123) == 33.6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mean(*values):\n",
+    "    return sum(values) / len(values)\n",
     "\n",
     "print(mean(1,2,3) == 2)\n",
     "print(mean(2,2,4,4) == 3)\n",
@@ -70,15 +127,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "def check_dictionary_content(...):\n",
+    "def check_dictionary_content(dictionary, **kvargs):\n",
     "    \"\"\"Sprawdza, czy w danym słowniku znajduje się conajmniej podana liczba elementów\"\"\"\n",
-    "    pass\n",
+    "    for key, val in kvargs.items():\n",
+    "        if dictionary.get(key, 0) < val:\n",
+    "            return False\n",
+    "    return True\n",
     "\n",
     "d = {'orange': 3, 'apple': 1, 'dogs': 10}\n",
     "print(check_dictionary_content(d, orange=2) == True)\n",
@@ -98,18 +171,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "def show_my_args(...): #a\n",
-    "    pass\n",
+    "def show_my_args(*unnamed_args): #a\n",
+    "    return \"\\n\".join([str(type(arg).__name__) + \":\" + str(arg) for arg in unnamed_args])\n",
     "\n",
     "print(show_my_args()==\"\")\n",
     "print(show_my_args(1, \"1\", 1.1)==\"int:1\\nstr:1\\nfloat:1.1\")\n",
-    "print(show_my_args([1,2], {1:1, 2:2}, {1,2})==\"list:[1, 2]\\ndict:{1: 1, 2: 2}\\nset:set([1, 2])\")"
+    "print(show_my_args([1,2], {1:1, 2:2}, {1,2})==\"list:[1, 2]\\ndict:{1: 1, 2: 2}\\nset:{1, 2}\")"
    ]
   },
   {
@@ -121,13 +204,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "c:1.1\n",
+      "b:1\n",
+      "a:1\n",
+      "False\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "show_my_args() takes 0 positional arguments but 1 was given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-20-89ea9b564e06>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mshow_my_args\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"1\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1.1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mshow_my_args\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"1\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1.1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;34m\"a:1\\nc:1.1\\nb:1\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#moze nie wyjsc z powodu innej kolejnosci\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mshow_my_args\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#TypeError\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: show_my_args() takes 0 positional arguments but 1 was given"
+     ]
+    }
+   ],
    "source": [
+    "def show_my_args(**named_args): #a\n",
+    "    return \"\\n\".join([str(key) + \":\" + str(val) for key, val in named_args.items()])\n",
+    "\n",
     "print(show_my_args()==\"\")\n",
+    "print(show_my_args(a=1,b=\"1\",c=1.1))\n",
     "print(show_my_args(a=1,b=\"1\",c=1.1)==\"a:1\\nc:1.1\\nb:1\") #moze nie wyjsc z powodu innej kolejnosci\n",
     "print(show_my_args(1)) #TypeError"
    ]
@@ -141,12 +251,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
+    "def show_my_args(*unnamed_args, **named_args): #a\n",
+    "    unnamed_args_arr = [str(type(arg).__name__) + \":\" + str(arg) for arg in unnamed_args]\n",
+    "    named_args_arr = [str(key) + \":\" + str(val) for key, val in named_args.items()]\n",
+    "    all_args_arr = unnamed_args_arr + named_args_arr\n",
+    "    return \"\\n\".join(all_args_arr)\n",
     "print(show_my_args(1,b=\"1\",c=1.1)==\"int:1\\nc:1.1\\nb:1\")"
    ]
   },
@@ -160,14 +283,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def numbers_to_percents(values):\n",
-    "    pass\n",
+    "    values_ = list(values)\n",
+    "    if iter(values) is iter(values):\n",
+    "        raise \"problem\"\n",
+    "    procents=[]\n",
+    "    suma = sum(values)\n",
+    "    procents = [value/suma for value in values]\n",
+    "    return procents\n",
+    "    #pass\n",
     "\n",
     "print(numbers_to_percents([1,2,1])==[0.25, 0.5, 0.25])\n",
     "print(numbers_to_percents([1])==[1])\n",
@@ -183,11 +323,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "exceptions must derive from BaseException",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-26-712a7bc9305f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumbers_to_percents\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-25-e7ba70db3ecc>\u001b[0m in \u001b[0;36mnumbers_to_percents\u001b[1;34m(values)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mnumbers_to_percents\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0miter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mis\u001b[0m \u001b[0miter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[1;34m\"problem\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mprocents\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0msuma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: exceptions must derive from BaseException"
+     ]
+    }
+   ],
    "source": [
     "print(numbers_to_percents(i for i in range(5)))"
    ]
@@ -208,13 +361,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "def zwroc_rosnace(...):\n",
+    "def zwroc_rosnace(fn, *args):\n",
+    "    return [i for i in args if fn(i) > i]\n",
     "    pass\n",
     "\n",
     "def f1(n):\n",
@@ -240,14 +404,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1\n",
+      "1 2\n",
+      "2 3\n",
+      "3 4\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "def zwroc_rosnace(...):\n",
-    "    pass\n",
+    "def zwroc_rosnace(fun, *args):\n",
+    "    return [arg for pos, arg in enumerate(args) if pos>0 and fun(arg)>fun(args[pos-1])]\n",
     "\n",
     "def f1(n):\n",
     "    return n**2-3*n\n",
@@ -257,6 +435,9 @@
     "\n",
     "def f3(word):\n",
     "    return word[::-1]\n",
+    "\n",
+    "for i, j in enumerate(range(1,5)):\n",
+    "    print(i, j)\n",
     "\n",
     "print(zwroc_rosnace(f1, 4, -5, 6, 2)==[-5])\n",
     "print(zwroc_rosnace(f2, *range(100))==[])\n",
@@ -279,14 +460,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'function'>\n",
+      "<class 'int'>\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
     "def ile_wywolana():\n",
-    "    pass\n",
+    "    ile_wywolana.w += 1\n",
+    "    return ile_wywolana.w\n",
+    "ile_wywolana.w = 0\n",
+    "\n",
+    "print(type(ile_wywolana))\n",
+    "print(type(ile_wywolana.w))\n",
     "\n",
     "print(ile_wywolana()==1)\n",
     "print(ile_wywolana()==2)\n",
@@ -309,14 +508,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n"
+     ]
+    }
+   ],
    "source": [
-    "def get_primes(number):\n",
-    "    pass"
+    "def get_primes():\n",
+    "    def prime_test(n):\n",
+    "        for d in range(2,n):\n",
+    "            if not n% d:\n",
+    "                return False\n",
+    "        return True\n",
+    "    x = 2\n",
+    "    while True:\n",
+    "        if prime_test(x):\n",
+    "            yield x\n",
+    "        x += 1\n",
+    "    pass\n",
+    "\n",
+    "g = get_primes()\n",
+    "for x in range(0, 10):\n",
+    "    print(next(g))"
    ]
   },
   {
@@ -337,14 +568,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21, 33, 24, 31, 9, 46, 45]\n"
+     ]
+    }
+   ],
    "source": [
+    "import random\n",
     "def lotto():\n",
-    "    pass"
+    "    liczby = list(range(1, 50))\n",
+    "    while True:\n",
+    "        random.shuffle(liczby)\n",
+    "        yield liczby[:6]\n",
+    "\n",
+    "generator = lotto()\n",
+    "print(next(generator))\n",
+    "    "
    ]
   },
   {
@@ -363,15 +610,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "0 True\n",
+      "1 True\n",
+      "2 True\n",
+      "3 True\n",
+      "4 True\n",
+      "5 True\n",
+      "6 True\n",
+      "7 True\n",
+      "8 True\n",
+      "9 True\n",
+      "10 True\n",
+      "11 True\n",
+      "12 True\n",
+      "13 True\n",
+      "14 True\n",
+      "15 True\n",
+      "16 True\n",
+      "17 True\n",
+      "18 True\n",
+      "19 True\n",
+      "20 True\n",
+      "21 True\n",
+      "0 True\n",
+      "1 True\n",
+      "2 True\n",
+      "3 True\n",
+      "4 True\n",
+      "5 True\n",
+      "6 True\n",
+      "7 True\n",
+      "8 True\n",
+      "9 True\n",
+      "10 True\n",
+      "11 True\n",
+      "12 True\n",
+      "13 True\n",
+      "14 True\n",
+      "15 True\n",
+      "16 True\n",
+      "17 True\n",
+      "18 True\n",
+      "19 True\n",
+      "20 True\n",
+      "21 True\n"
+     ]
+    }
+   ],
    "source": [
     "def natural_numbers(k=0):\n",
     "    \"\"\"Tworzy generator liczb naturalnych od liczby k\"\"\"\n",
-    "    pass\n",
+    "    while True:\n",
+    "        yield k\n",
+    "        k += 1\n",
     "\n",
     "import types\n",
     "print(isinstance(natural_numbers(), types.GeneratorType))\n",
@@ -389,14 +690,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "1 True\n",
+      "1 True\n",
+      "2 True\n",
+      "6 True\n",
+      "24 True\n",
+      "120 True\n",
+      "720 True\n",
+      "5040 True\n"
+     ]
+    }
+   ],
    "source": [
     "def factorials():\n",
-    "    \"\"\"Tworzy generator kolejnych silnii\"\"\"\n",
+    "    a = 1\n",
+    "    b = 1\n",
+    "    while True:\n",
+    "        yield a\n",
+    "        a *= b\n",
+    "        b += 1\n",
     "    pass\n",
     "\n",
     "import types\n",
@@ -406,6 +728,15 @@
     "for truth, answer in zip(results, factorials()):\n",
     "    print(truth, truth == answer)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -424,7 +755,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
