--- a/lab04.ipynb
+++ b/lab04.ipynb
@@ -23,15 +23,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def flow_rate(weight, time):\n",
+    "def flow_rate(weight, time, *, period=1, units_per_kg=1):\n",
     "    \"\"\" Funkcja wylicza ile wagi produktu przybyło/ubyło w jednostce czasu \"\"\"\n",
-    "    return weight / time\n",
+    "    return (weight * units_per_kg)  / (time * period)\n",
     "\n",
     "weight = 0.5\n",
     "time = 3"
@@ -39,11 +39,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.167 kg per second\n"
+     ]
+    }
+   ],
    "source": [
     "flow = flow_rate(weight, time)\n",
     "print(\"{0:.3} kg per second\".format(flow))"
@@ -62,11 +70,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.7777777777777777 grams per minute\n"
+     ]
+    }
+   ],
    "source": [
     "flow = flow_rate(weight, time, period=60, units_per_kg=1000)\n",
     "print(\"{} grams per minute\".format(flow))"
@@ -74,11 +90,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.167 kg per second\n"
+     ]
+    }
+   ],
    "source": [
     "flow = flow_rate(weight, time, period=1, units_per_kg=1)\n",
     "print(\"{0:.3} kg per second\".format(flow))"
@@ -86,11 +110,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.167 grams per minute\n"
+     ]
+    }
+   ],
    "source": [
     "flow = flow_rate(weight, time)\n",
     "print(\"{0:.3} grams per minute\".format(flow))"
@@ -105,14 +137,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    flow = flow_rate(weight, time, 3600, 2.2)\n",
+    "    flow = flow_rate(weight, time, 2.2, 3600)\n",
     "except TypeError:\n",
     "    print(True)"
    ]
@@ -144,17 +185,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Function squares_list took: 0.3467748165130615\n",
+      "Function squares_comprehension took: 0.28914928436279297\n",
+      "Function squares_map took: 5.7220458984375e-06\n"
+     ]
+    }
+   ],
    "source": [
     "from time import time\n",
     "\n",
     "def timeit(func):\n",
     "    \"\"\" Wypisuje czas wywołania udekorowanej funckji \"\"\"\n",
-    "    pass\n",
+    "    def time_func(*args, **kwargs):\n",
+    "        start_time = time()\n",
+    "        func(*args, **kwargs)\n",
+    "        print(\"Function \" + func.__name__ + \" took: \" + str(time() - start_time))\n",
+    "    return time_func\n",
     "\n",
     "@timeit\n",
     "def squares_list(n):\n",
@@ -193,27 +248,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "1851.6306055826135 1851.6206055790747 \t True\n",
+      "2571374.1779327393 2571374.1502537644 \t True\n",
+      "37.0835255840575 37.073525584050856 \t True\n",
+      "1030.835280471365 1030.834724423455 \t True\n",
+      "628.2253138691885 628.2153138694442 \t True\n",
+      "295990.8690303564 295990.86043506325 \t True\n",
+      "547.8677880426403 547.857788043697 \t True\n",
+      "225111.12466454503 225111.11694009934 \t True\n",
+      "323.28954086406156 323.27954086437495 \t True\n",
+      "78382.25094601512 78382.2461561108 \t True\n",
+      "1512.895586527884 1512.88558653013 \t True\n",
+      "1716617.1133518217 1716617.0984479617 \t True\n",
+      "88.04733870720156 88.0373387072182 \t True\n",
+      "5812.9310767981215 5812.929754987095 \t True\n",
+      "861.255797490594 861.2457974905224 \t True\n",
+      "556308.2560896873 556308.2427713143 \t True\n",
+      "1337.8205399552826 1337.8105399562003 \t True\n",
+      "1342302.7992248535 1342302.7806134252 \t True\n",
+      "1107.729442231357 1107.719442234401 \t True\n",
+      "920281.7827463149 920281.7720280692 \t True\n",
+      "494.11372906906763 494.1037290698882 \t True\n",
+      "183103.8787961006 183103.8713105771 \t True\n",
+      "1912.411874823738 1912.4018748299077 \t True\n",
+      "2742960.727214813 2742960.6981397094 \t True\n",
+      "1943.8005671021529 1943.7905670997422 \t True\n",
+      "2833741.354942322 2833741.3265594533 \t True\n",
+      "1423.057385958964 1423.0473859612205 \t True\n",
+      "1518797.9161739347 1518797.897018297 \t True\n",
+      "1132.3609340237454 1132.3509340268777 \t True\n",
+      "961663.9912128447 961663.9783436568 \t True\n",
+      "411.93897730045137 411.9289773013921 \t True\n",
+      "127264.11800831555 127264.11175542811 \t True\n",
+      "1404.8581366660073 1404.8481366640112 \t True\n",
+      "1480198.7349987028 1480198.7153162584 \t True\n",
+      "698.347953040502 698.3379530414749 \t True\n",
+      "365756.93190097803 365756.92249361787 \t True\n",
+      "938.7717443838483 938.7617443854801 \t True\n",
+      "660955.2204608917 660955.2095412522 \t True\n",
+      "1528.7955396110192 1528.7855396085329 \t True\n",
+      "1752888.9417648313 1752888.9195871148 \t True\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.float_info.epsilon # epsilon maszynowy\n",
     "\n",
     "\n",
     "def derivate(epsilon=None):\n",
-    "     \"\"\"\n",
+    "    \"\"\"\n",
     "    Zwraca pochodną funkcji w punkcie, wg. wzoru f'(x) = [f(x+h) - f(x)]/h, \n",
     "    gdzie h jest parametrem dekoratora, jeśli nie zostanie podany, należy przyjąć 1000 * epsilon maszynowy\n",
     "    \"\"\"\n",
-    "    pass\n",
+    "    if not epsilon:\n",
+    "        epsilon = 1000 * sys.float_info.epsilon\n",
+    "    def inner_decorator(f):\n",
+    "        def inner_fun(x):\n",
+    "            return (f(x+epsilon) - f(x)) / epsilon\n",
+    "        return inner_fun\n",
+    "    return inner_decorator\n",
     "\n",
     "\n",
-    "@derivate(0.01)\n",
+    "\n",
     "def f(x):\n",
     "    return x*x\n",
+    "f = derivate(0.01)(f)\n",
     "\n",
     "@derivate(0.00001)\n",
     "def g(x):\n",
@@ -250,16 +363,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def accepts(*types):\n",
     "    \"\"\"Sprawdza czy udekorowanej funckji zostały podane odpowiednie parametry zdefiniowane \n",
     "       w argumentach dekoratora\"\"\"\n",
-    "    pass\n",
+    "    def inner_decorator(f):\n",
+    "        def inner_fun(*args,**kwargs):\n",
+    "            all_args = list(args)+list(kwargs.values())\n",
+    "            if any(type(arg)!=arg_type for arg, arg_type in zip(all_args, types)):\n",
+    "                raise TypeError\n",
+    "            return f(*args,**kwargs)\n",
+    "        return inner_fun\n",
+    "    return inner_decorator\n",
+    "\n",
     "\n",
     "\n",
     "@accepts(str)\n",
@@ -308,15 +443,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def returns(*types):\n",
     "    \"\"\"Sprawdza czy udekorowana funkcja zwraca poprawne argumenty, zdefiniowane w parametrach dekoratora\"\"\"\n",
-    "    pass\n",
+    "    def inner_decorator(f):\n",
+    "        def inner_fun(*args,**kwargs):\n",
+    "            all_args = f(*args,**kwargs)\n",
+    "            if any(type(arg)!=arg_type for arg, arg_type in zip(all_args, types)):\n",
+    "                raise TypeError\n",
+    "            return all_args\n",
+    "        return inner_fun\n",
+    "    return inner_decorator\n",
     "\n",
     "\n",
     "@returns(str)\n",
@@ -337,7 +490,7 @@
     "print(split_indices(x=[6,9]) == (6,9))\n",
     "\n",
     "try:\n",
-    "    split('AB')\n",
+    "    split_indices('AB')\n",
     "except TypeError:\n",
     "    print(True)"
    ]
@@ -484,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
