--- a/lab02.ipynb
+++ b/lab02.ipynb
@@ -29,20 +29,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "def check_anagram(first, second):\n",
-    "    \"\"\" Sprawdza czy podane wyrazy są anagramami \"\"\"\n",
-    "    pass\n",
+    "    \"\"\"dictionary = dict()\n",
+    "    for letter in first:\n",
+    "        if letter not in dictionary:\n",
+    "            dictionary[letter] = 1\n",
+    "        else:\n",
+    "            dictionary[letter] += 1\n",
+    "            \n",
+    "    for letter in second:\n",
+    "        if letter not in dictionary:\n",
+    "            return False\n",
+    "        else:\n",
+    "            dictionary[letter] -= 1\n",
+    "            \n",
+    "    for key in dictionary:\n",
+    "        if dictionary[key] != 0:\n",
+    "            return False\n",
+    "    \n",
+    "    return True\"\"\"\n",
+    "            \n",
+    "    \n",
+    "    \n",
+    "    #return sorted(first) == sorted(second)\n",
+    "    return [False,True][sum([ord(x) for x in first]) == sum([ord(y) for y in second])]\n",
     "\n",
     "print(check_anagram(\"abcd\", \"dcba\") == True)\n",
     "print(check_anagram(\"aba\", \"baa\") == True)\n",
     "print(check_anagram(\"aba\", \"ba\") == False)\n",
-    "print(check_anagram(\"tom marvolo riddle \", \"i am lord voldemort\") == True)"
+    "print(check_anagram(\"tom marvolo riddle \", \"i am lord voldemort\") == True)\n",
+    "print(check_anagram(\"aadbcd\", \"abcbcd\")==False)"
    ]
   },
   {
@@ -81,6 +115,53 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def szyfruj(co, klucz):\n",
+    "    return \"\".join([klucz[ord(l)-ord('a')] if l!= \" \" else \" \" for l in co])\n",
+    "    r = \"\"\n",
+    "    for c in co:\n",
+    "        ord_a = ord(\"a\")\n",
+    "        o = ord(c) - ord_a\n",
+    "        if c == \" \":\n",
+    "            r += \" \"\n",
+    "        else:\n",
+    "            r += klucz[o]\n",
+    "    print(r)\n",
+    "\n",
+    "\n",
+    "\n",
+    "def rozszyfruj(co, klucz):\n",
+    "    return \"\".join([chr(klucz.index(l) + ord(\"a\")) if l!= \" \" else \" \" for l in co])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ala ma kota\n"
+     ]
+    }
+   ],
+   "source": [
+    "napis = \"ala ma kota\"\n",
+    "szyfruj(napis,\"zyxwvutsrqponmlkjihgfedcba\")\n",
+    "print(rozszyfruj('zoz nz plgz', \"zyxwvutsrqponmlkjihgfedcba\"))\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -101,11 +182,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def even_numbers_from_list(data):\n",
     "    \"\"\"Zwraca podlistę \"data\" zawierającą wyłącznie parzyste liczby\"\"\"\n",
@@ -113,7 +205,7 @@
     "    for point in data:\n",
     "        if point % 2 == 0:\n",
     "            result.append(point)\n",
-    "    return result\n",
+    "    return [ p for p in data if p % 2 == 0]\n",
     "\n",
     "print(even_numbers_from_list([1, 2, 3, 4]) == [2, 4])\n",
     "print(even_numbers_from_list(range(10)) == list(range(0, 10, 2)))\n",
@@ -123,11 +215,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def words_analyze(words):\n",
     "    \"\"\"Zwraca listę trójek, gdzie i'ta trójka to (i, i'te słowo, długość i'tego słowa)\"\"\"\n",
@@ -136,7 +237,7 @@
     "    for word in words:\n",
     "        result.append((i, word, len(word)))\n",
     "        i += 1\n",
-    "    return result\n",
+    "    return [(i, word, len(word)) for i, word in enumerate(words)]\n",
     "\n",
     "print(words_analyze(['tomek', 'jadzia']) == [(0, 'tomek', 5), (1, 'jadzia', 6)])\n",
     "print(words_analyze([]) == [])"
@@ -144,11 +245,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def count_words_starting_with_given_letter(text, letter):\n",
     "    \"\"\"Zwraca słownik gdzie kluczami są wszystkie słowa występujące w tekście \n",
@@ -160,7 +271,7 @@
     "                result[word] = 1\n",
     "            else:\n",
     "                result[word] += 1\n",
-    "    return result\n",
+    "    return {word:text.split().count(word) for word in text.split() if word[0] == letter}\n",
     "\n",
     "print(count_words_starting_with_given_letter('ola ma kota o imieniu ola', 'o') == {'ola': 2, 'o': 1})\n",
     "print(count_words_starting_with_given_letter('ola ma kota o imieniu ola', 'k') == {'kota': 1})\n",
@@ -218,23 +329,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def func1(n):\n",
-    "    pass"
+    "    return [(i,j) for i in range(n) for j in range(n)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(func1(3)==[(0, 0), (0, 1), (0, 2), (1, 0), (1, 1), (1, 2), (2, 0), (2, 1), (2, 2)])\n",
     "print(func1(0)==[])"
@@ -249,23 +369,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def func2(n):\n",
-    "    pass"
+    "    return sorted([(j,i) for i in range(n) for j in range(i)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "[(0, 1), (0, 2), (0, 3), (1, 2), (1, 3), (2, 3)]\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(func2(3)==[(0, 1), (0, 2), (1, 2)])\n",
     "print(func2(4)==[(0, 1), (0, 2), (0, 3), (1, 2), (1, 3), (2, 3)])"
@@ -280,23 +410,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "def func3(n):\n",
-    "    pass"
+    "    return [(i,j) for i in range(n) for j in range(i)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(func3(3)==[(1, 0), (2, 0), (2, 1)])\n",
     "print(func3(4)==[(1, 0), (2, 0), (2, 1), (3, 0), (3, 1), (3, 2)])"
@@ -318,23 +457,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def powerset(x):\n",
-    "    pass"
+    "    the_set = [{}]\n",
+    "    for item in x:\n",
+    "        the_set += [old_set + {item} for old_set in the_set]\n",
+    "    return the_set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(powerset('abc')==[[], ['a'], ['b'], ['a', 'b'], ['c'], ['a', 'c'], ['b', 'c'], ['a', 'b', 'c']])\n",
     "print(powerset([1, 2, 3])==[[], [1], [2], [1, 2], [3], [1, 3], [2, 3], [1, 2, 3]])\n",
@@ -358,15 +510,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start: \n",
+      "Czas wykonania:  4.024717092514038\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "def primes_extra_A(N):\n",
+    "def primes_extra_a(N):\n",
     "    \"\"\"Zwraca zbiór liczb pierwszych od 0 do N włącznie\"\"\"\n",
+    "    r = set()\n",
+    "    i = 2\n",
+    "    \n",
+    "    def loop(r, i):\n",
+    "        for d in r:\n",
+    "            if not i % d:\n",
+    "                return False\n",
+    "        return True\n",
+    "        \n",
+    "    while(i <= N):\n",
+    "        if loop(r, i):\n",
+    "            r.add(i)\n",
+    "        i+= 1\n",
+    "    return r\n",
+    "\n",
     "    pass\n",
+    "        \n",
+    "print('Start: ')\n",
+    "import time\n",
+    "a = time.time()\n",
+    "primes_extra_a(100000)\n",
+    "b = time.time()\n",
+    "print('Czas wykonania: ', b-a)\n",
+    "\n",
     "    \n",
     "print(primes_extra_a(5) == {2, 3, 5})\n",
     "print(primes_extra_a(10) == {2, 3, 5, 7})\n",
@@ -375,11 +562,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'primes_extra_b' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-16400022e8f4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mpass\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprimes_extra_b\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprimes_extra_b\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m7\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprimes_extra_b\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m7\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m11\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m13\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m17\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m19\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m23\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m29\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m31\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m37\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m41\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m43\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m47\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m53\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m59\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m61\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m67\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m71\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m73\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m79\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m83\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m89\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m97\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'primes_extra_b' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def primes_extra_B(N):\n",
     "    \"\"\"Zwraca zbiór liczb pierwszych od 0 do N włącznie\"\"\"\n",
@@ -389,6 +588,15 @@
     "print(primes_extra_b(10) == {2, 3, 5, 7})\n",
     "print(primes_extra_b(100) == {2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -407,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
