--- a/lab04.ipynb
+++ b/lab04.ipynb
@@ -549,14 +549,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
+    "def zlozenie_f(n, f):\n",
+    "    def func(x):\n",
+    "        if n==1:\n",
+    "            return f(x)\n",
+    "        return f(zlozenie_f(n-1, f)(x))\n",
+    "    return func\n",
+    "\n",
     "def zlozenie(n):\n",
-    "    pass\n",
+    "    \"\"\"def funk(f):\n",
+    "        def fuu(x):\n",
+    "            a=x\n",
+    "            for _ in range(n):\n",
+    "                a=f(a)\n",
+    "            return a\n",
+    "        return fuu\n",
+    "    return funk\"\"\"\n",
+    "    def funk(f):\n",
+    "        return zlozenie_f(n, f)\n",
+    "    return funk\n",
+    "        \n",
     "\n",
     "@zlozenie(3)\n",
     "def f1(x):\n",
@@ -605,20 +634,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
+    "def my_function2(x, y):\n",
+    "    return {\n",
+    "        1: y*y,\n",
+    "        2: x+y,\n",
+    "        3: x*y,\n",
+    "        4: 0\n",
+    "    }[x]\n",
+    "\n",
     "def my_function(x, y):\n",
-    "    pass\n",
+    "    switch = {\n",
+    "            1: (lambda x, y: y*y),\n",
+    "            2: (lambda x, y: x+y),\n",
+    "            3: (lambda x, y: x*y),\n",
+    "            4: (lambda x, y: 0)\n",
+    "        }\n",
+    "    return switch[x](x, y)\n",
     "\n",
     "print(my_function(1,3)==9)\n",
     "print(my_function(2,4)==6)\n",
     "print(my_function(3,1)==3)\n",
     "print(my_function(4,9)==0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
