--- a/part08.ipynb
+++ b/part08.ipynb
@@ -158,7 +158,7 @@
     }
    },
    "source": [
-    "[DjangoSites.org](djangoSites.org) posiada stale rosnącą listę stron działających dzięki Django."
+    "[DjangoSites.org](http://djangoSites.org) posiada stale rosnącą listę stron działających dzięki Django."
    ]
   },
   {
@@ -1509,6 +1509,215 @@
     }
    },
    "source": [
+    "## Template"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Dowolny tekst otoczony podwójną parą nawiasów klamrowych (np. `{{ person_name }}`) jest zmienną. Oznacza \"wstaw w tym miejscu wartość zmiennej o podanej nazwie\". \n",
+    "\n",
+    "Dowolny tekst otoczony nawiasem klamrowym i znakiem procentu (np. `{% if ordered_warranty %}`) jest znacznikiem szablonu - znacznik  informuje po prostu system szablonowy o potrzebie wykonania pewnego działania).\n",
+    "\n",
+    "Dowolny tekst otoczony nawiasem klamrowym i znakiem hasz (np. `{# komentarz #}`) jest komentarzem - tekst pomiędzy tym tagiem jest ignorowany.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "![alt text](images/Obraz1.png \"Guido van Rossum\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## View"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Oparte o funkcje"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from django.http import HttpResponse\n",
+    "import datetime\n",
+    "\n",
+    "def about(request):\n",
+    "    now = datetime.datetime.now()\n",
+    "    html = \"<html><body>O nas. Teraz jest %s.</body></html>\" % now\n",
+    "    return HttpResponse(html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Oparte o funkcje (bardziej zaawansowany przykład)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from django.http import HttpResponse\n",
+    "from django.template import loader\n",
+    "\n",
+    "from .models import Question\n",
+    "\n",
+    "\n",
+    "def index(request):\n",
+    "    latest_question_list = Question.objects.order_by('-pub_date')[:5]\n",
+    "    template = loader.get_template('polls/index.html')\n",
+    "    context = {\n",
+    "        'latest_question_list': latest_question_list,\n",
+    "    }\n",
+    "    return HttpResponse(template.render(context, request))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from django.conf.urls import url\n",
+    "from dfrom some_app.views import import about\n",
+    "\n",
+    "urlpatterns = [\n",
+    "    url(r'^about/$', about),\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Oparte o klasy generyczne (bez modyfikacji)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from django.conf.urls import url\n",
+    "from django.views.generic import TemplateView\n",
+    "\n",
+    "urlpatterns = [\n",
+    "    url(r'^about/$', TemplateView.as_view(template_name=\"about.html\")),\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Oparte o klasy generyczne (z modyfikacją)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# some_app/views.py\n",
+    "from django.views.generic import TemplateView\n",
+    "\n",
+    "class AboutView(TemplateView):\n",
+    "    template_name = \"about.html\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# urls.py\n",
+    "from django.conf.urls import url\n",
+    "from some_app.views import AboutView\n",
+    "\n",
+    "urlpatterns = [\n",
+    "    url(r'^about/$', AboutView.as_view()),\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## URL"
    ]
   },
@@ -1663,16 +1872,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Źródła wiedzy o Pythonie"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Zadania na wykład:\n",
-    "- formset\n",
-    "- userena\n",
+    "- formset (zajęte Wójcik)\n",
+    "- userena (zajęte Wójcik)\n",
     "- django vs. ajax\n",
     "- [https://github.com/django-polymorphic/django-polymorphic](https://github.com/django-polymorphic/django-polymorphic)\n",
     "- pliki statyczne"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
